--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h5 class="u-text u-text-default u-text-1">giving you</h5>
         <h1 class="u-custom-font u-font-montserrat u-text u-text-default u-text-2">Vitamins</h1>
-        <p class="u-text u-text-3">With our Salad AgroChip device, based on AgroChip technology, can give you your daily portion of Vitamin A (helps immune system) and Vitamin K (helps to keep bones healthy)</p>
+        <p class="u-text u-text-3">Our Salad AgroChip device, based on AgroChip technology, can give you your daily portion of Vitamin A (helps immune system) and Vitamin K (helps to keep bones healthy)</p>
       </div>
     </section>
     <section class="u-clearfix u-custom-color-2 u-section-3" id="sec-7d7c">
