--- a/Home.html
+++ b/Home.html
@@ -98,7 +98,7 @@
               <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-layout-cell-1" src="">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">AgroChip Technology</h2>
-                  <p class="u-align-center u-text u-text-body-alt-color u-text-2">Using sofisticated microchips and sensors, AgroChip technology allows for precise and thorough control of the plant growing by merging gardening with tech&nbsp;</p>
+                  <p class="u-align-center u-text u-text-body-alt-color u-text-2">Using sophisticated microchips and sensors, AgroChip technology allows for precise and thorough control of the plant growing by merging gardening with tech&nbsp;</p>
                   <a href="/Home.html#sec-6aee" class="u-border-2 u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-none u-radius-20 u-text-hover-white u-text-white u-btn-1">Contact us</a>
                 </div>
               </div>
