--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-7c27"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="512" data-image-height="512">
+        <a href="/Home.html" class="u-image u-logo u-image-1" data-image-width="512" data-image-height="512" title="Home">
           <img src="/images/logo_black.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-text u-text-default u-text-1">Personal Hydroponics</p>
@@ -98,7 +98,7 @@
               <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-layout-cell-1" src="">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">AgroChip Technology</h2>
-                  <p class="u-align-center u-text u-text-body-alt-color u-text-2">Using sophisticated microchips and sensors, AgroChip technology allows for precise and thorough control of the plant growing by merging gardening with tech&nbsp;</p>
+                  <p class="u-align-center u-text u-text-body-alt-color u-text-2">Using sophisticated microchips and sensors, AgroChip technology allows for precise and thorough control of plant growth by merging gardening with tech&nbsp;</p>
                   <a href="/Home.html#sec-6aee" class="u-border-2 u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-none u-radius-20 u-text-hover-white u-text-white u-btn-1">Contact us</a>
                 </div>
               </div>
@@ -173,7 +173,7 @@
     </section>
     <section class="u-align-center u-clearfix u-section-6" id="sec-6aee">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h6 class="u-custom-font u-font-montserrat u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-1">Please contact us to be the first to know when we start shipping Salad AgroChips<br>Please note that shipping will be available at first only within the UK
+        <h6 class="u-custom-font u-font-montserrat u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-1">Contact us to be the first to know when we start shipping Salad AgroChips<br>Please note that shipping will be available at first only within the UK
         </h6>
         <div class="u-form u-form-1">
           <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-horizontal u-form-spacing-15 u-inner-form" style="padding: 15px" source="email">
@@ -263,7 +263,7 @@
       H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg></span>
           </a>
         </div>
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="512" data-image-height="512">
+        <a href="/Home.html" class="u-image u-logo u-image-1" data-image-width="512" data-image-height="512" title="Home">
           <img src="/images/logo_black.png" class="u-logo-image u-logo-image-1">
         </a>
       </div></footer>
